# breedi-genomic-api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
app/: __init__.py  inference.py  main.py  models.py
docs/: deployment.md  project-report.md
scripts/: generate_dummy_model.py
tests/: conftest.py  test_health.py  test_predict.py
